--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.11.0",
     "seedrandom": "^3.0.5"
   },
   "devDependencies": {
@@ -22,4 +23,3 @@
     "vite": "^5.0.8"
   }
 }
-
